mobile flicker fix 02

--- a/v2/style.css
+++ b/v2/style.css
@@ -9,6 +9,7 @@
 
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -21,10 +22,10 @@ h2 {
 }
 
 #scroller {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   overflow-y: scroll;
-	scroll-snap-type: y mandatory;
+	scroll-snap-type: y proximity;
   overscroll-behavior: none;
   scroll-snap-stop: always;
 }
